--- a/app/src/main/res/layout/activity_meals.xml
+++ b/app/src/main/res/layout/activity_meals.xml
@@ -8,28 +8,31 @@
 
     <TextView
         android:id="@+id/tvDinner"
-        android:layout_width="92dp"
+        android:layout_width="250dp"
         android:layout_height="34dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="20dp"
-        android:text="Cina"
+        android:width="200dp"
+        android:gravity="start"
+        android:text="@string/meals_dinner"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageButtonDinner"
-        app:layout_constraintTop_toBottomOf="@+id/etSnacksKcal" />
+        app:layout_constraintTop_toBottomOf="@+id/mealsSnacks"
+        app:lineHeight="30dp" />
 
     <EditText
-        android:id="@+id/etDinnerKcal"
+        android:id="@+id/mealsDinner"
         android:layout_width="405dp"
-        android:layout_height="55dp"
+        android:layout_height="45dp"
         android:ems="10"
         android:gravity="start|top"
-        android:inputType="textMultiLine"
+        android:inputType="numberSigned|textMultiLine|number|text|phone"
         android:selectAllOnFocus="false"
         android:singleLine="false"
-        android:text="756 - 900 Kcal"
+        android:text="@string/meals_0kcal"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +50,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
+        app:layout_constraintTop_toBottomOf="@+id/mealsBreakfast" />
 
     <Button
         android:id="@+id/btnAddSnacks"
@@ -60,7 +63,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etLunchKcal" />
+        app:layout_constraintTop_toBottomOf="@+id/mealsLaunch" />
 
     <Button
         android:id="@+id/btnAddDinner"
@@ -73,32 +76,35 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etSnacksKcal" />
+        app:layout_constraintTop_toBottomOf="@+id/mealsSnacks" />
 
     <TextView
         android:id="@+id/tvSnacks"
-        android:layout_width="92dp"
+        android:layout_width="250dp"
         android:layout_height="34dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:text="Gustari"
+        android:width="200dp"
+        android:gravity="start"
+        android:text="@string/meals_snacks"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageButtonSnack"
-        app:layout_constraintTop_toBottomOf="@+id/etLunchKcal" />
+        app:layout_constraintTop_toBottomOf="@+id/mealsLaunch"
+        app:lineHeight="30dp" />
 
     <EditText
-        android:id="@+id/etLunchKcal"
+        android:id="@+id/mealsLaunch"
         android:layout_width="405dp"
-        android:layout_height="55dp"
+        android:layout_height="45dp"
         android:ems="10"
         android:gravity="start|top"
-        android:inputType="textMultiLine"
+        android:inputType="numberSigned|textMultiLine|number|text|phone"
         android:selectAllOnFocus="false"
         android:singleLine="false"
-        android:text="811 - 1082 Kcal"
+        android:text="@string/meals_0kcal"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,33 +118,36 @@
         android:layout_marginTop="20dp"
         android:background="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
+        app:layout_constraintTop_toBottomOf="@+id/mealsBreakfast"
         app:srcCompat="@drawable/soup" />
 
     <TextView
         android:id="@+id/tvLunch"
-        android:layout_width="79dp"
+        android:layout_width="250dp"
         android:layout_height="28dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:text="Pranz"
+        android:width="200dp"
+        android:gravity="start"
+        android:text="@string/meals_launch"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageButtonLunch"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
+        app:layout_constraintTop_toBottomOf="@+id/mealsBreakfast"
+        app:lineHeight="30dp" />
 
     <EditText
-        android:id="@+id/etSnacksKcal"
+        android:id="@+id/mealsSnacks"
         android:layout_width="405dp"
-        android:layout_height="55dp"
+        android:layout_height="45dp"
         android:ems="10"
         android:gravity="start|top"
-        android:inputType="textMultiLine"
+        android:inputType="numberSigned|textMultiLine|number|text|phone"
         android:selectAllOnFocus="false"
         android:singleLine="false"
-        android:text="0 - 541 Kcal"
+        android:text="@string/meals_0kcal"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -147,28 +156,30 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="92dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:text="Mic dejun"
+        android:layout_width="250dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="8dp"
+        android:width="200dp"
+        android:gravity="start"
+        android:text="@string/meals_breakfast"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/mealsBreakfast"
         app:layout_constraintStart_toEndOf="@+id/imageButtonBreakfast2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:lineHeight="30dp" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine"
+        android:id="@+id/mealsBreakfast"
         android:layout_width="405dp"
-        android:layout_height="55dp"
+        android:layout_height="45dp"
         android:ems="10"
         android:gravity="start|top"
-        android:inputType="textMultiLine"
+        android:inputType="numberSigned|textMultiLine|number|text|phone"
         android:selectAllOnFocus="false"
         android:singleLine="false"
-        android:text="676 - 946 Kcal"
+        android:text="@string/meals_0kcal"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -179,18 +190,18 @@
         android:id="@+id/imageButtonBreakfast2"
         android:layout_width="46dp"
         android:layout_height="37dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/coffee"
         android:tint="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/mealsBreakfast"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/coffee" />
 
     <Button
         android:id="@+id/btnAddBreakfast"
         android:layout_width="57dp"
         android:layout_height="44dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="92dp"
         android:layout_marginEnd="4dp"
         android:background="#FFFFFF"
         android:text="+"
@@ -206,7 +217,7 @@
         android:layout_marginTop="20dp"
         android:background="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etLunchKcal"
+        app:layout_constraintTop_toBottomOf="@+id/mealsLaunch"
         app:srcCompat="@drawable/apple" />
 
     <ImageButton
@@ -216,7 +227,42 @@
         android:layout_marginTop="20dp"
         android:background="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etSnacksKcal"
+        app:layout_constraintTop_toBottomOf="@+id/mealsSnacks"
         app:srcCompat="@drawable/chicken" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="318dp"
+        android:layout_height="48dp"
+        android:gravity="center"
+        android:text="@string/meals_subTitle"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="@string/meals_title"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/mealsAddButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
+        android:text="@string/meals_addButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mealsDinner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
