--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -53,18 +53,10 @@
 
     <TextView
         android:id="@+id/tvWeight"
-        android:layout_width="130dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="40dp"
-        android:fontFamily="sans-serif"
-        android:gravity="start"
         android:text="@string/profile_weight"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/tvAge"
-        app:layout_constraintTop_toBottomOf="@+id/tvAge" />
+        app:layout_constraintTop_toBottomOf="@+id/tvAge"
+        style="@style/label" />
 
     <TextView
         android:id="@+id/tvHeight"
@@ -152,16 +144,12 @@
 
     <EditText
         android:id="@+id/profileBDate"
-        android:layout_width="200dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="25dp"
-        android:ems="10"
-        android:inputType="textPersonName"
         android:text="@string/profile_loading"
         app:layout_constraintEnd_toEndOf="@+id/profileName"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/profileName"
-        app:layout_constraintTop_toBottomOf="@+id/profileName" />
+        app:layout_constraintTop_toBottomOf="@+id/profileName"
+        style="@style/input" />
 
     <Button
         android:id="@+id/profileUpdate"
